--- a/css/styles.css
+++ b/css/styles.css
@@ -15,37 +15,51 @@
   align-items: center;
   flex-direction: column;
   width: 100vw;
+  max-width: 100vw;
   height: 100vh;
+  max-height: 100vh;
 }
 
 rotor {
-  width: 99%;
-  height: 99%;
+  width: 99vw;
+  max-width: 99vw;
+  height: 99vh;
+  max-height: 99vh;
 }
 
 iframe, code {
   font-size: 5vmin;
   cursor: 5vmin;
   width: 100%;
+  max-width: 100%;
   height: 100%;
+  max-height: 100%;
   overflow: hidden;
   border: 0.1vmin solid orange;
   border-radius: 2.5vmin;
   touch-action: none;
 }
 
-:is(code, code :focus) {
-  height: calc(98% * .333);
-}
-
 @media (orientation: portrait) {
   stator {
     flex-direction: column;
+  }
+  :is(code, code :focus) {
+    height: calc(49vh * .333);
+    max-height: calc(49vh * .333);
+    width: 100vw;
+    max-width: 100vw;
   }
 }
 
 @media (orientation: landscape) {
   stator {
     flex-direction: row;
+  }
+  :is(code, code :focus) {
+    height: calc(98vh * .333);
+    max-height: calc(98vh * .333);
+    width: 49vw;
+    max-width: 49vw;
   }
 }
